Since 0.5.1
-----------
- `insert!`
  - `.bulk()` accepts iterator over references or instances

Notes for publishing
--------------------
- don't forget to bump and publish rorm-macro!